test: added update, findBy*  methods