@@ -8,6 +8,7 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -31,11 +32,11 @@ public class BookControllerTest {
         author1 = new Author(1L, "J.K. Rowling");
         author2 = new Author(2L, "Tolkien");
 
-        genre1 = new Genre(1L, "Fantasía");
-        genre2 = new Genre(2L, "Aventura");
+        genre1 = new Genre(1L, "Fantasy");
+        genre2 = new Genre(2L, "Adventure");
 
-        book1 = new Book(1L, "Harry Potter", "Magia y hechizos", "1234", List.of(author1), List.of(genre1));
-        book2 = new Book(2L, "El Hobbit", "Un viaje inesperado", "5678", List.of(author2), List.of(genre1, genre2));
+        book1 = new Book(1L, "Harry Potter", "Magic and spells", "1234", List.of(author1), List.of(genre1));
+        book2 = new Book(2L, "Hobbit", "An unexpected trip", "5678", List.of(author2), List.of(genre1, genre2));
     }
 
         @Test
@@ -48,9 +49,9 @@ public class BookControllerTest {
         List<Book> result = bookController.getAllBooks();
 
         assertEquals(2, result.size());
-        assertEquals("Harry Potter", result.get(0).getTitle());
-        assertEquals("Tolkien", result.get(1).getAuthors().get(0).getName());
-        assertEquals("Aventura", result.get(1).getGenres().get(1).getName());
+        assertEquals("Harry Potter", result.getFirst().getTitle());
+        assertEquals("Tolkien", result.get(1).getAuthors().getFirst().getName());
+        assertEquals("Adventure", result.get(1).getGenres().get(1).getName());
     }
 
     @Test
@@ -72,5 +73,36 @@ public class BookControllerTest {
     void deleteBook_shouldCallRepositoryDelete() {
         bookController.deleteBook(5L);
         verify(bookRepository, times(1)).delete(5L);
+    }
+
+    @Test
+    void updateBook_shouldCallRepositoryUpdate() {
+        bookController.updateBook(book1);
+
+        verify(bookRepository, times(1)).update(book1);
+    }
+
+    @Test
+    void findByTitle_shouldReturnCorrectBook() {
+        when(bookRepository.findByTitle("Harry Potter")).thenReturn(Collections.singletonList(book1));
+
+        List<Book> result = bookController.findByTitle("Harry Potter");
+        assertEquals("Harry Potter", result.getFirst().getTitle());
+    }
+
+    @Test
+    void findByAuthor_shouldReturnCorrectBook() {
+        when(bookRepository.findByAuthor("J.K. Rowling")).thenReturn(Collections.singletonList(book1));
+
+        List<Book> result = bookController.findByAuthor("J.K. Rowling");
+        assertEquals(List.of(author1), result.getFirst().getAuthors());
+    }
+
+    @Test
+    void findByGenre_shouldReturnCorrectBook() {
+        when(bookRepository.findByGenre("Fantasy")).thenReturn(Collections.singletonList(book2));
+
+        List<Book> result = bookController.findByGenre("Fantasy");
+        assertEquals(List.of(genre1, genre2), result.getFirst().getGenres());
     }
 }
